started creating user module

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ POSTGRES_PORT=5432
 JWT_ACCESS_SECRET=secretAccess
 JWT_REFRESH_SECRET=secret
 POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=admin
+POSTGRES_PASSWORD=misha003
 POSTGRES_DB=test
 REDIS_HOST=redis
 REDIS_PORT=6379
