create phone verification

--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ POSTGRES_DB=test
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_HOST=127.0.0.1
-REDIS_PORT=6379
 REDIS_PASSWORD=test
 TWILIO_ACCOUNT_SID=ACc16054516d3bbca2a3b85f5402dc8741
 TWILIO_AUTH_TOKEN=eb51286d2adfcf1ccd3a28f4fc15a21e
 TWILIO_VERIFICATION_SERVICE_SID=VA6f8592c9a350f668258336e2dab16491
+TWILIO_SENDER_PHONE_NUMBER="(205) 521-01-93"
